Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6052

Inconsistent results with bit type

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.0.10
    • 10.0.13
    • None
    • None

    Description

      Found while merging type_bit test. type_bit patch attached.

      CREATE TABLE t1(f1 bit(2) NOT NULL default b'10',f2 bit(14) NOT NULL default b'11110000111100');
      INSERT INTO t1 (f1) VALUES (DEFAULT);
      INSERT INTO t1 VALUES (b'',b''),('','');
      SELECT HEX(f1), HEX(f2) FROM t1;
      HEX(f1)	HEX(f2)
      2	3C3C
      2	3C8F <!-------- should be 0 0?
      0	0
      DROP TABLE t1;

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.